# EfficiencyAnalyze

./: README.md  main.py  pyproject.toml  requirements.txt
src/: factory.py  models.py  readers.py  reports.py
tests/: conftest.py  test_factory.py  test_main.py  test_models.py  test_readers.py  test_reports.py
